Updated Orbitalscan Website with full new design

--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OrbitalScan - Web3 Discovery</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <img src="logo.png" alt="OrbitalScan Logo" class="hero-logo">
+  <!-- Header Section -->
+  <header class="header">
+    <img src="public/images/logo.png" alt="Orbitalscan Logo" class="logo">
     <h1>OrbitalScan</h1>
-    <p>Scan the Future of Web3 with OrbitalScan</p>
-    <a href="https://t.me/orbitalscan_bot" target="_blank" class="btn-primary">🚀 Launch Mini App</a>
-  </section>
+    <p class="subtitle">Scan the Future of Web3 with OrbitalScan</p>
+    <a href="https://t.me/OrbitalScan" class="btn-primary" target="_blank">🚀 Launch Mini App</a>
+  </header>
 
   <!-- About Section -->
   <section class="about">
     <h2>About OrbitalScan</h2>
     <p>OrbitalScan is your gateway to early-stage NFT pre-mints, low-risk memecoins, and the best airdrop opportunities across multiple blockchains. We make Web3 discovery simple, secure, and exciting.</p>
-    <p>Website: <a href="https://www.orbitalscan.app" target="_blank" style="color:#0fffc1;">www.orbitalscan.app</a></p>
+    <p>Visit us: <a href="https://www.orbitalscan.app" target="_blank">www.orbitalscan.app</a></p>
   </section>
 
   <!-- Features Section -->
@@ -48,11 +47,14 @@
     </ul>
   </section>
 
-  <!-- Join Section -->
-  <section class="join">
-    <h2>Join OrbitalScan's Journey</h2>
-    <p>We are in our BETA phase. OrbitalScan is growing rapidly and adding new features. Support us, invest, or become a part of our futuristic journey!</p>
-    <a href="mailto:sinasalmasiemirate@gmail.com" class="btn-secondary">Contact Us</a>
+  <!-- Contact Section -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:sinasalmasiemirate@gmail.com">sinasalmasiemirate@gmail.com</a></p>
+    <p>Telegram ID: <a href="https://t.me/SinaDali" target="_blank">@SinaDali</a></p>
+    <p>Meeting Australia - Dubai: +61 470 561 501</p>
+    <p>Twitter: <a href="https://x.com/OrbitalScanapp" target="_blank">@OrbitalScanapp</a></p>
+    <p>Telegram Channel: <a href="https://t.me/OrbitalScan" target="_blank">@OrbitalScan</a></p>
   </section>
 
   <!-- Footer -->
