--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OrbitalScan - Web3 Discovery</title>
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
-  <!-- Header Section -->
-  <header class="header">
-    <img src="public/images/logo.png" alt="Orbitalscan Logo" class="logo">
+  <section class="hero">
+    <img src="/images/logo.png" alt="OrbitalScan Logo" class="logo">
     <h1>OrbitalScan</h1>
-    <p class="subtitle">Scan the Future of Web3 with OrbitalScan</p>
-    <a href="https://t.me/OrbitalScan" class="btn-primary" target="_blank">🚀 Launch Mini App</a>
-  </header>
+    <p>Scan the Future of Web3 with OrbitalScan</p>
+    <a href="https://t.me/OrbitalScan" target="_blank" class="btn-primary">🚀 Launch Mini App</a>
+  </section>
 
-  <!-- About Section -->
   <section class="about">
     <h2>About OrbitalScan</h2>
     <p>OrbitalScan is your gateway to early-stage NFT pre-mints, low-risk memecoins, and the best airdrop opportunities across multiple blockchains. We make Web3 discovery simple, secure, and exciting.</p>
     <p>Visit us: <a href="https://www.orbitalscan.app" target="_blank">www.orbitalscan.app</a></p>
   </section>
 
-  <!-- Features Section -->
   <section class="features">
     <h2>Key Features</h2>
     <ul>
-      <li>🌌 EarlyCall - Find the next big memecoin early</li>
-      <li>🖼️ NFT Discovery - Explore promising NFT collections</li>
-      <li>🎯 Airdrop Hunter - Daily airdrop opportunities</li>
+      <li>🌌 <strong>EarlyCall</strong> - Find the next big memecoin early</li>
+      <li>🖼️ <strong>NFT Discovery</strong> - Explore promising NFT collections</li>
+      <li>🎯 <strong>Airdrop Hunter</strong> - Daily airdrop opportunities</li>
     </ul>
   </section>
 
-  <!-- Roadmap Section -->
   <section class="roadmap">
     <h2>Roadmap</h2>
     <ul>
@@ -47,17 +43,17 @@
     </ul>
   </section>
 
-  <!-- Contact Section -->
   <section class="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:sinasalmasiemirate@gmail.com">sinasalmasiemirate@gmail.com</a></p>
-    <p>Telegram ID: <a href="https://t.me/SinaDali" target="_blank">@SinaDali</a></p>
-    <p>Meeting Australia - Dubai: +61 470 561 501</p>
-    <p>Twitter: <a href="https://x.com/OrbitalScanapp" target="_blank">@OrbitalScanapp</a></p>
-    <p>Telegram Channel: <a href="https://t.me/OrbitalScan" target="_blank">@OrbitalScan</a></p>
+    <div class="contact-info">
+      <p><strong>Email:</strong> <a href="mailto:sinasalmasiemirate@gmail.com">sinasalmasiemirate@gmail.com</a></p>
+      <p><strong>Telegram ID:</strong> <a href="https://t.me/SinaDali" target="_blank">@SinaDali</a></p>
+      <p><strong>Meeting Australia - Dubai:</strong> +61 470 561 501</p>
+      <p><strong>Twitter (X):</strong> <a href="https://x.com/OrbitalScanapp" target="_blank">OrbitalScan Twitter</a></p>
+      <p><strong>Telegram Channel:</strong> <a href="https://t.me/OrbitalScan" target="_blank">OrbitalScan Channel</a></p>
+    </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>© 2025 OrbitalScan. Built by Sina Salmasi.</p>
   </footer>
