Full Update Website

--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OrbitalScan - Web3 Discovery</title>
-  <link rel="stylesheet" href="public/style.css">
+  <title>OrbitalScan</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="public/images/logo.png">
 </head>
 <body>
 
-  <!-- Background Video -->
   <video autoplay muted loop id="bg-video">
     <source src="public/images/bg-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Main Content -->
   <div class="content">
-    <img src="public/images/logo.png" alt="OrbitalScan Logo" class="logo">
-    <h1>OrbitalScan</h1>
-    <p>Scan the Future of Web3 with OrbitalScan</p>
-    <a href="https://t.me/orbitalscan_bot" target="_blank" class="btn-primary">🚀 Launch Mini App</a>
+    <header>
+      <img src="public/images/logo.png" alt="OrbitalScan Logo" class="logo">
+      <h1>OrbitalScan</h1>
+      <p>Scan the Future of Web3 with OrbitalScan</p>
+      <a href="https://t.me/orbitalscan_bot" class="btn-primary" target="_blank">🚀 Launch Mini App</a>
+    </header>
 
-    <!-- About -->
-    <section class="section">
+    <section class="about">
       <h2>About OrbitalScan</h2>
       <p>OrbitalScan is your gateway to early-stage NFT pre-mints, low-risk memecoins, and the best airdrop opportunities across multiple blockchains. We make Web3 discovery simple, secure, and exciting.</p>
       <p>Visit us: <a href="https://www.orbitalscan.app" target="_blank">www.orbitalscan.app</a></p>
     </section>
 
-    <!-- Features -->
-    <section class="section">
+    <section class="features">
       <h2>Key Features</h2>
       <ul>
         <li>🌌 EarlyCall - Find the next big memecoin early</li>
@@ -38,8 +37,7 @@
       </ul>
     </section>
 
-    <!-- Roadmap -->
-    <section class="section">
+    <section class="roadmap">
       <h2>Roadmap</h2>
       <ul>
         <li>✅ Dexscreener Live Tracking</li>
@@ -52,18 +50,17 @@
       </ul>
     </section>
 
-    <!-- Contact -->
-    <section class="section">
+    <section class="contact">
       <h2>Contact Us</h2>
-      <div class="social-icons">
-        <a href="https://x.com/OrbitalScanapp" target="_blank">
-          <img src="public/images/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://t.me/OrbitalScan" target="_blank">
-          <img src="public/images/telegram.png" alt="Telegram">
-        </a>
+      <div class="social-links">
         <a href="mailto:sinasalmasiemirate@gmail.com" target="_blank">
           <img src="public/images/email.png" alt="Email">
+        </a>
+        <a href="https://t.me/SinaDali" target="_blank">
+          <img src="public/images/telegram.png" alt="Telegram">
+        </a>
+        <a href="https://x.com/OrbitalScanapp" target="_blank">
+          <img src="public/images/twitter.png" alt="Twitter">
         </a>
       </div>
 
@@ -71,7 +68,7 @@
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn-primary">Send Message</button>
+        <button type="submit">Send</button>
       </form>
     </section>
 
