Full Update Website

--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OrbitalScan</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="public/images/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
 </head>
 <body>
 
   <video autoplay muted loop id="bg-video">
-    <source src="public/images/bg-video.mp4" type="video/mp4">
+    <source src="images/bg-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
   <div class="content">
     <header>
-      <img src="public/images/logo.png" alt="OrbitalScan Logo" class="logo">
+      <img src="images/logo.png" alt="OrbitalScan Logo" class="logo">
       <h1>OrbitalScan</h1>
       <p>Scan the Future of Web3 with OrbitalScan</p>
       <a href="https://t.me/orbitalscan_bot" class="btn-primary" target="_blank">🚀 Launch Mini App</a>
@@ -54,13 +54,13 @@
       <h2>Contact Us</h2>
       <div class="social-links">
         <a href="mailto:sinasalmasiemirate@gmail.com" target="_blank">
-          <img src="public/images/email.png" alt="Email">
+          <img src="images/email.png" alt="Email">
         </a>
         <a href="https://t.me/SinaDali" target="_blank">
-          <img src="public/images/telegram.png" alt="Telegram">
+          <img src="images/telegram.png" alt="Telegram">
         </a>
         <a href="https://x.com/OrbitalScanapp" target="_blank">
-          <img src="public/images/twitter.png" alt="Twitter">
+          <img src="images/twitter.png" alt="Twitter">
         </a>
       </div>
 
