Final update: favicon, correct links, logo nav, external tabs

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OrbitalScan</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 <body>
   <header class="header">
-    <img src="images/logo.png" alt="OrbitalScan Logo" class="logo" />
+    <a href="index.html">
+      <img src="images/logo.png" alt="OrbitalScan Logo" class="logo" />
+    </a>
     <nav class="navbar">
       <a href="#features">Features</a>
       <a href="#mine">OrbitalMine</a>
@@ -21,7 +24,7 @@
     <div class="hero-content">
       <h1>Track Alpha. Discover Gems.</h1>
       <p>Your Web3 Radar for Early Memecoins, NFTs, Airdrops & more.</p>
-      <a href="https://t.me/OrbitalScanMiniApp" class="cta-button">Open in Telegram</a>
+      <a href="https://t.me/orbitalscan_bot" class="cta-button" target="_blank">Open in Telegram</a>
     </div>
   </section>
 
@@ -51,7 +54,7 @@
     <h2>About OrbitalMine</h2>
     <img src="images/logo.png" alt="OrbitalMine Logo" class="mine-logo" />
     <p>OrbitalMine is a reputation-based Web3 mining platform where users collect points, upgrade NFT miners, and earn $OMINE tokens. Connected with OrbitalScan and designed to work with the Diamante Network.</p>
-    <a href="https://orbitalmine-web.vercel.app" class="mine-link">Visit OrbitalMine</a>
+    <a href="https://orbitalmine-web.vercel.app/" class="mine-link" target="_blank">Visit OrbitalMine</a>
   </section>
 
   <section class="contact" id="contact">
@@ -59,8 +62,8 @@
     <p>If you're interested in supporting or collaborating with us, reach out directly:</p>
     <ul class="contact-links">
       <li><img src="images/email.png" alt="Email Icon" /> SinaSalmasiEmirate@gmail.com</li>
-      <li><img src="images/telegram.png" alt="Telegram Icon" /> @Sina_Salmasi</li>
-      <li><img src="images/twitter.png" alt="Twitter Icon" /> @SinaSalmasi</li>
+      <li><img src="images/telegram.png" alt="Telegram Icon" /> <a href="https://t.me/Sina_Salmasi" target="_blank">@Sina_Salmasi</a></li>
+      <li><img src="images/twitter.png" alt="Twitter Icon" /> <a href="https://twitter.com/SinaSalmasi" target="_blank">@SinaSalmasi</a></li>
     </ul>
     <p class="network-note">Built for the Diamante Network. Full on-chain compatibility in progress.</p>
     <img src="images/diamante.png" alt="Diamante Logo" class="diamante-logo" />
