New homepage with OrbitalVerse vision and AI-powered roadmap

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OrbitalVerse | OrbitalScan & OrbitalMine</title>
+  <title>OrbitalVerse | Web3 Intelligence & Mining Network</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
@@ -17,48 +17,54 @@
       <a href="/">Home</a>
       <a href="orbitalscan.html">OrbitalScan</a>
       <a href="orbitalmine.html">OrbitalMine</a>
-      <a href="#contact">Contact</a>
+      <a href="#contact">📩</a>
     </nav>
   </header>
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Welcome to OrbitalVerse</h1>
-      <p>A unified Web3 ecosystem combining Alpha Discovery and Reputation Mining.<br />Explore both products below.</p>
-      <div class="cta-group">
-        <a href="orbitalscan.html" class="cta-button">Go to OrbitalScan</a>
-        <a href="orbitalmine.html" class="cta-button secondary">Go to OrbitalMine</a>
-      </div>
+      <h1>OrbitalVerse</h1>
+      <p>The next-gen ecosystem where AI meets Web3 — empowering people, devices, and data across the globe.</p>
     </div>
   </section>
 
   <section class="features">
-    <h2>Why OrbitalVerse?</h2>
+    <h2>Who We Are</h2>
     <div class="features-grid">
       <div class="feature-box">
-        <h3>One Ecosystem</h3>
-        <p>Manage Alpha discovery and Web3 mining in a single network experience.</p>
+        <h3>Personal AI Agents</h3>
+        <p>Each user builds their own emotionally-aware AI assistant — helping with research, planning, daily tasks, and decision-making across the internet.</p>
       </div>
       <div class="feature-box">
-        <h3>Powered by Diamante</h3>
-        <p>Our infrastructure is fully designed for Diamante Network compatibility.</p>
+        <h3>Device-Based Mining</h3>
+        <p>Every device becomes a miner. Users contribute compute power, earn tokens, and validate digital reputation in our gamified mining network.</p>
       </div>
       <div class="feature-box">
-        <h3>Community First</h3>
-        <p>Built by a solo founder, grown with the support of believers like you.</p>
+        <h3>Personalized Investment Strategies</h3>
+        <p>Generate custom portfolios based on your budget, behavior, risk profile, and emotional preferences using adaptive AI logic.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Private Learning Environments</h3>
+        <p>We deliver local, on-device AI training hubs for tech learners, students, and researchers in AI, blockchain, and futuristic domains.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Global Web3 Webinars</h3>
+        <p>Join international knowledge-sharing events led by pioneers in decentralized technology, innovation, and on-chain intelligence.</p>
+      </div>
+      <div class="feature-box">
+        <h3>Unified Infrastructure</h3>
+        <p>OrbitalScan and OrbitalMine are connected through Diamante Network — creating a modular foundation for real-world, intelligent automation.</p>
       </div>
     </div>
   </section>
 
   <section class="contact" id="contact">
-    <h2>Contact & Partnership</h2>
-    <p>If you're interested in supporting or collaborating with us, reach out directly:</p>
+    <h2>Contact</h2>
     <ul class="contact-links">
       <li><img src="images/email.png" alt="Email Icon" /> SinaSalmasiEmirate@gmail.com</li>
       <li><img src="images/telegram.png" alt="Telegram Icon" /> <a href="https://t.me/Sina_Salmasi" target="_blank">@Sina_Salmasi</a></li>
       <li><img src="images/twitter.png" alt="Twitter Icon" /> <a href="https://twitter.com/SinaSalmasi" target="_blank">@SinaSalmasi</a></li>
     </ul>
-    <p class="network-note">Built for the Diamante Network. OrbitalScan & OrbitalMine are part of OrbitalVerse.</p>
     <img src="images/diamante.png" alt="Diamante Logo" class="diamante-logo" />
   </section>
 
