Final OrbitalVerse homepage: full redesign with images, vision, and waitlist

--- a/public/index.html
+++ b/public/index.html
@@ -17,55 +17,80 @@
       <a href="/">Home</a>
       <a href="orbitalscan.html">OrbitalScan</a>
       <a href="orbitalmine.html">OrbitalMine</a>
-      <a href="#contact">📩</a>
+      <a href="#waitlist">Partner with Us</a>
     </nav>
   </header>
 
   <section class="hero">
     <div class="hero-content">
       <h1>OrbitalVerse</h1>
-      <p>The next-gen ecosystem where AI meets Web3 — empowering people, devices, and data across the globe.</p>
+      <p>Unifying AI Agents and Web3 Discovery into a single intelligent ecosystem for the future of personal automation and decentralized rewards.</p>
+      <img src="images/hero-main.jpg" alt="OrbitalVerse City" class="hero-img" />
     </div>
   </section>
 
   <section class="features">
-    <h2>Who We Are</h2>
+    <h2>What We Do</h2>
+    <img src="images/orbitalverse-eco.jpg" alt="OrbitalVerse Ecosystem" class="section-img" />
     <div class="features-grid">
       <div class="feature-box">
         <h3>Personal AI Agents</h3>
-        <p>Each user builds their own emotionally-aware AI assistant — helping with research, planning, daily tasks, and decision-making across the internet.</p>
+        <p>Each user builds their own emotionally-aware AI assistant for daily research, analysis, and task execution across the web.</p>
       </div>
       <div class="feature-box">
         <h3>Device-Based Mining</h3>
-        <p>Every device becomes a miner. Users contribute compute power, earn tokens, and validate digital reputation in our gamified mining network.</p>
+        <p>Every machine becomes a miner. Earn rewards while contributing compute power and validating reputation on-chain.</p>
       </div>
       <div class="feature-box">
-        <h3>Personalized Investment Strategies</h3>
-        <p>Generate custom portfolios based on your budget, behavior, risk profile, and emotional preferences using adaptive AI logic.</p>
+        <h3>Smart Portfolio Curation</h3>
+        <p>Create investment baskets based on your unique preferences, budget, and emotional risk profile — powered by intelligent agents.</p>
       </div>
       <div class="feature-box">
-        <h3>Private Learning Environments</h3>
-        <p>We deliver local, on-device AI training hubs for tech learners, students, and researchers in AI, blockchain, and futuristic domains.</p>
+        <h3>Local AI Learning Spaces</h3>
+        <p>Personalized learning modules in tech and AI fields, built for students, researchers, and professionals — all on your device.</p>
       </div>
       <div class="feature-box">
-        <h3>Global Web3 Webinars</h3>
-        <p>Join international knowledge-sharing events led by pioneers in decentralized technology, innovation, and on-chain intelligence.</p>
-      </div>
-      <div class="feature-box">
-        <h3>Unified Infrastructure</h3>
-        <p>OrbitalScan and OrbitalMine are connected through Diamante Network — creating a modular foundation for real-world, intelligent automation.</p>
+        <h3>International Web3 Webinars</h3>
+        <p>Connect with the global community through live events, panel talks, and future-focused workshops.</p>
       </div>
     </div>
   </section>
 
-  <section class="contact" id="contact">
-    <h2>Contact</h2>
-    <ul class="contact-links">
-      <li><img src="images/email.png" alt="Email Icon" /> SinaSalmasiEmirate@gmail.com</li>
-      <li><img src="images/telegram.png" alt="Telegram Icon" /> <a href="https://t.me/Sina_Salmasi" target="_blank">@Sina_Salmasi</a></li>
-      <li><img src="images/twitter.png" alt="Twitter Icon" /> <a href="https://twitter.com/SinaSalmasi" target="_blank">@SinaSalmasi</a></li>
-    </ul>
-    <img src="images/diamante.png" alt="Diamante Logo" class="diamante-logo" />
+  <section class="projects">
+    <h2>Explore Our Platforms</h2>
+    <div class="features-grid">
+      <div class="feature-box">
+        <img src="images/orbitalscan-preview.jpg" alt="OrbitalScan Preview" />
+        <h3>OrbitalScan</h3>
+        <p>Track the newest tokens, NFT drops, airdrops, and memecoins before they trend. Discover alpha signals in real time.</p>
+        <a href="orbitalscan.html" class="cta-button">Learn More</a>
+      </div>
+      <div class="feature-box">
+        <img src="images/orbitalmine-preview.jpg" alt="OrbitalMine Preview" />
+        <h3>OrbitalMine</h3>
+        <p>Gamified mining meets AI logic. Upgrade NFT miners, build your reputation, and earn native tokens every day.</p>
+        <a href="orbitalmine.html" class="cta-button">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="about">
+    <h2>Who We Are</h2>
+    <img src="images/orbital-console.jpg" alt="Orbital Console" class="section-img" />
+    <p>
+      We are a 5-person core team with expertise across AI, project design, machine learning, blockchain development, and product strategy.  
+      Since 2016, we’ve led and contributed to dozens of initiatives in Web3 and intelligent automation — united now under one bold mission:  
+      Building a truly personal, automated, and decentralized digital life. OrbitalVerse is more than a product — it’s a long-term vision.
+    </p>
+  </section>
+
+  <section class="waitlist" id="waitlist">
+    <h2>Partner with Us</h2>
+    <p>Join our journey and get notified as we grow the OrbitalVerse.</p>
+    <form class="waitlist-form">
+      <input type="email" placeholder="Enter your email" required />
+      <button type="submit">Join Waitlist</button>
+    </form>
   </section>
 
   <footer class="footer">
